RESOLVED FIXED171868
RealtimeOutgoingAudioSource is crashing when given data with more than two channels
https://bugs.webkit.org/show_bug.cgi?id=171868
Summary RealtimeOutgoingAudioSource is crashing when given data with more than two ch...
youenn fablet
Reported 2017-05-09 11:09:51 PDT
As a first fix, we should let the converter do the mix down
Attachments
Patch (2.68 KB, patch)
2017-05-09 11:11 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-05-09 11:11:51 PDT
Radar WebKit Bug Importer
Comment 2 2017-05-09 11:12:46 PDT
WebKit Commit Bot
Comment 3 2017-05-09 11:42:50 PDT
Comment on attachment 309515 [details] Patch Clearing flags on attachment: 309515 Committed r216530: <http://trac.webkit.org/changeset/216530>
WebKit Commit Bot
Comment 4 2017-05-09 11:42:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.