RealtimeOutgoingAudioSource is crashing when given data with more than two channels https://bugs.webkit.org/show_bug.cgi?id=171868

Patch by Youenn Fablet <youenn@apple.com> on 2017-05-09
Reviewed by Eric Carlson.

Manual testing.

* platform/mediastream/mac/RealtimeOutgoingAudioSource.cpp:
(WebCore::libwebrtcAudioFormat): Capping the number of channels to 2.
(WebCore::RealtimeOutgoingAudioSource::audioSamplesAvailable):

Canonical link: https://commits.webkit.org/188789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216530 268f45cc-cd09-0410-ab3c-d52691b4dbfc